# emotif

./: INSTALL  LICENSE  LICENSE.in  Makefile  Makefile.in  config.cache  config.status  configure  configure.in  site.defs
cgi-bin/: cgi-lib.pl.in  nph-emotif-maker.in  nph-emotif-scan.in  nph-emotif-search.in  nph-make-page.in  nph-reformat.in  nph-top-scores.in
html/: arac-example.txt  emotif-maker.html.in  emotif-scan.html.in  emotif-search.html.in  index.html.in  menu.in  scan-example.txt  search-example.txt  tubulin-example.txt
share/: HSSP+beta  default  default.new
src/: darray.c  darray.h  darray.h.in  dejavu.h  dejavu.h.in  emotif-maker.cc  emotif-maker.cc.in  emotif-search.c  emotif-search.c.in  emotif.c  emotif.c.in  emotif.h  emotif.h.in  fwrite-emotifs.c  fwrite-emotifs.c.in  fwrite-sequences.c  fwrite-sequences.c.in  gradient.cc  gradient.cc.in  list-non-biased-emotifs.c  motifgrep.cc  motifgrep.cc.in  myppmchange.c  myppmchange.c.in  scanner.c  scanner.c.in  scanner.h  scanner.h.in
test/: test-block  test-full-block  test-sequence
